--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "electron": "^6.0.12",
+    "electron-html-to": "^2.6.0",
     "inquirer": "^6.5.0"
   }
 }
